# Music_Player

./: CMakeLists.txt  LICENSE.txt  README.md  deploy.bat  deploy.sh  main.cc  rebuild.bat  resources.qrc  simple_deploy.bat
header/: MusicController.h  song_model.h
installer/: installer.nsi.in  musicplayer.desktop.in
qml/: Main.qml  Main.qml.autosave
src/: MusicController.cc  song_model.cc
